feat: teams, emails and cb
